hw5/ing.yaml
apiVersion: v1
items:
- apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    annotations:
      kubernetes.io/ingress.class: nginx
      meta.helm.sh/release-name: srv2
      meta.helm.sh/release-namespace: default
    creationTimestamp: "2024-12-24T17:26:32Z"
    generation: 1
    labels:
      app.kubernetes.io/instance: srv2
      app.kubernetes.io/managed-by: Helm
      app.kubernetes.io/name: srv2
      app.kubernetes.io/version: 1.16.0
      helm.sh/chart: srv2-0.1.0
    name: srv2-ingress
    namespace: default
    resourceVersion: "269489"
    uid: 6a009be6-6d55-4ca8-81ba-2599e8d33e4f
  spec:
    ingressClassName: nginx
    rules:
    - host: srv2.localdev.me
      http:
        paths:
        - backend:
            service:
              name: srv2
              port:
                number: 8000
          path: /
          pathType: Prefix
  status:
    loadBalancer: {}
kind: List
metadata:
  resourceVersion: ""
